<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/suppression"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/livre" />

        <Spinner
            android:id="@+id/spLivre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSupprimer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/supprimer" />

    <Button
        android:id="@+id/btnRetour"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/retour" />

</LinearLayout>
