<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajout"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/titre" />

        <EditText
            android:id="@+id/edTitre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

        <requestFocus />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/nbpage" />

        <EditText
            android:id="@+id/edNbPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number">

        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/btnAjouter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajouter" />

    <Button
        android:id="@+id/btnRetour"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/retour" />

</LinearLayout>
